# code-plagiarism

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  autotests.sh  canalyze.py  docker.mk  get_ast.py  install.sh  pyanalyze.py  pyproject.toml  requirements.txt  setup.py  setup.py.in  test_canalyse.py  test_canalyze.py  test_pyanalyse.py  test_pyanalyze.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_test.yml  check_n_push.yml  check_n_push_image.yml  dockerhub.yml  test.yml
Notebooks/: usecases.ipynb
cpp/: header.h  k2.cpp  k3.cpp  same2.cpp  sample2.cpp  sample5.cpp  selection_sort_2.cpp  test.cpp  test1.cpp  test2.cpp
cpp/dataset/: sample10.cpp  sample11.cpp  sample12.cpp  sample3.cpp  sample4.cpp  sample7.cpp  sample8.cpp
cpp/tests/: k1.cpp  same1.cpp  sample1.cpp  sample6.cpp  sample9.cpp  selection_sort_1.cpp  test.cpp  test1.cpp
debian/: changelog.in  control.in  copyright.in  postinst.in  preinst.in  rules
docker/: base_ubuntu1804.dockerfile.in  base_ubuntu2004.dockerfile.dockerignore  base_ubuntu2004.dockerfile.in  base_ubuntu2204.dockerfile  base_ubuntu2204.dockerfile.in  base_ubuntu2404.dockerfile  compose.yml  docker.mk  test_ubuntu1804.dockerfile.in  test_ubuntu2004.dockerfile.in  test_ubuntu2204.dockerfile  test_ubuntu2204.dockerfile.in  test_ubuntu2404.dockerfile  ubuntu1804.dockerfile.in  ubuntu2004.dockerfile.in  ubuntu2204.dockerfile  ubuntu2204.dockerfile.in  ubuntu2404.dockerfile
docs/: gst.ipynb  gst.md  heskel_algorithm.md  structure_metric.md
docs/notebooks/: gst.ipynb  requirements.txt  time_survey.py.ipynb  usecases.ipynb  utils.py
locales/: babel.cfg  codeplag.pot  i18n.mk
locales/translations/en/LC_MESSAGES/: codeplag.po
locales/translations/ru/LC_MESSAGES/: codeplag.po
logs/: README.md
notebooks/: usecases.ipynb
profile.d/: codeplag
py/: Check_for_errors.py  Threads.py  brut_forse.py  sample1.py  sample11.py  sample12.py  sample14.py  sample5.py  sample8.py  sample9.py  task1.py  task13.py  task14.py  task5.py  task6.py  test1.py  test2.py
py/tests/: Binary_search.py  brut_forse.py  sample1.py  sample10.py  sample11.py  sample13.py  sample2.py  sample3.py  sample4.py  sample6.py  task10.py  task11.py  task12.py  task2.py  task3.py  task4.py  task7.py  task8.py  task9.py  test2.py
src/: logger.py
src/codeplag/: __init__.py  __main__.py  astfeatures.py  brand_consts.py  brand_consts.py.in  codeplagcli.py  config.py  consts.py  consts.py.in  consts.tmp.py  display.py  featurecache.py  featurescache.py  getfeatures.py  logger.py  mode.py  mongo.py  plagcli.py  reporters.py  translate.py  types.py  utils.py
src/codeplag/algorithms/: compare.py  featurebased.py  stringbased.py  tokenbased.py
src/codeplag/algorithms/tests/: test_featurebased.py  test_stringbased.py  test_tokenbased.py
src/codeplag/cplag/: __main__.py  const.py  context.py  metric.py  tree.py  util.py  utils.py
src/codeplag/cplag/tests/: test_metric.py  test_tree.py
src/codeplag/db/: mongo.py  testkit.py
src/codeplag/handlers/: check.py  report.py  settings.py
src/codeplag/pyplag/: __main__.py  astwalkers.py  const.py  mode.py  other.py  tfeatures.py  utils.py
src/codeplag/pyplag/tests/: test_astwalkers.py  test_tfeatures.py  test_utils.py
src/codeplag/tests/: test_codeplagcli.py  test_utils.py
src/codeplag/tests/cplag/: context.py  test_metric.py  util.py
src/codeplag/tests/data/: test2.py
src/codeplag/tests/pyplag/: __main__.py  context.py
src/cplag/: __main__.py  canalyze.py  const.py  metric.py  tree.py  util.py
src/github_helper/: const.py  github_parser.py  utils.py
src/metadata_to_mongo_save/: mongo.py
src/profile.d/: codeplag
src/pyplag/: __main__.py  const.py  metric.py  mode.py  other.py  pyanalyze.py  tfeatures.py  tree.py  utils.py
src/sbin/: codeplag
src/templates/: general.templ  report.templ  report_en.templ  report_ru.templ  sources.templ
src/webparsers/: async_github_parser.py  consts.py  consts.py.in  github_parser.py  logger.py  types.py
src/webparsers/tests/: test_github_parser.py
stack/: Launch_example.md  PyTest.md
stack/MongoDB_overview/: TTL_example.py  main_functional.py
stack/Pytest_overview/: try_pytest_features.py
stack/Pytest_overview/tests_dir/: test_n1.py  test_n2.py
test/: conftest.py
test/auto/: conftest.py  const.py  test_bugs.py  test_functional.py  test_sources.py  utils.py
test/auto/functional/: conftest.py  test_check.py  test_mongo.py  test_report.py  test_settings.py  test_stream_log.py  test_translate.py
test/codeplag/: test_codeplagcli.py  test_utils.py
test/codeplag/algorithms/: test_tokenbased.py
test/codeplag/cplag/: test_tree.py
test/codeplag/data/: test3.py
test/codeplag/pyplag/: test_astwalkers.py
test/codeplag/pyplag/data/: test1.py
test/cplag/: __main__.py  context.py  test_canalyze.py  test_tree.py
test/misc/: test_makefile.py
test/pyplag/: __main__.py  context.py  test_metric.py  test_other.py  test_pyanalyze.py  test_tfeatures.py  test_tree.py  test_utils.py  util.py
test/unit/codeplag/: conftest.py  test_codeplagcli.py  test_config.py  test_display.py  test_featurecache.py  test_featurescache.py  test_getfeatures.py  test_reporters.py  test_serialization_ast_features.py  test_utils.py
test/unit/codeplag/algorithms/: test_compare.py  test_featurebased.py  test_stringbased.py  test_tokenbased.py
test/unit/codeplag/cplag/: test_tree.py
test/unit/codeplag/data/: test1.py  (+1 more)
test/unit/webparsers/: test_github_parser.py  test_types.py
test/webparsers/: test_github_parser.py
(+16 files in other folders)
