[project]
name = "codeplag"
version = "0.6.0"
description = "Code plagiarism searching package."
authors = [
    { name = "Artyom Semidolin, Dmitry Nikolaev, Alexander Evsikov" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = "~=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Plagiarism Detection",
]
dependencies = [
    "argcomplete~=3.5.3",
    "numpy~=1.26.4",
    "pandas~=2.2.3",
    "ccsyspath~=1.1.0",
    "clang~=18.1.8",
    "llvmlite~=0.45.1",
    "libclang~=18.1.1",
    "python-decouple~=3.8",
    "requests~=2.32.3",
    "typing-extensions~=4.12.2",
    "aiohttp~=3.9.3",
    "Jinja2~=3.1.6",
    "cachetools==5.5.2",
    "gidgethub~=5.3.0",
    "pymongo~=4.12.1",
]

[dependency-groups]
test = ["pytest~=8.4.2", "pytest-mock~=3.15.1", "pytest-cov~=7.0.0"]
lint = ["pre-commit~=4.3.0"]
translate = ["Babel==2.17.0", "Jinja2~=3.1.6"]
man = ["argparse-manpage==4.7"]

[project.urls]
Repository = "https://github.com/OSLL/code-plagiarism"
Issues = "https://github.com/OSLL/code-plagiarism/issues"

[project.scripts]
codeplag = "codeplag:main"

[build-system]
requires = ["setuptools~=80.9.0", "Cython~=3.1.6"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
builtins = ["_"]
line-length = 99
lint.select = [
    "D", # pydocstyle
    "F",    # pyflakes
    "E",    # pycodestyle Error
    "W",    # pycodestyle Warning
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ANN",  # flake8-annotations
    "SIM",  # flake8-simplify
    "ERA",  # eradicate
    "C90",  # mccabe
]
lint.ignore = [
    "ANN003",  # missing type annotations for `*kwargs`
    "ANN102",
    "ANN201",
    "ANN204",
    "ANN401",  # dynamically typed expressions (typing.Any)
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
]
lint.exclude = ["*.ipynb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.pyright]
pythonVersion = "3.12"

include = [
    "src",
    "docs/notebooks"
]

executionEnvironments = [
    { root = "src" },
    { root = "docs/notebooks", extraPaths = ["src"] }
]

typeCheckingMode = "standard"

[tool.coverage.run]
branch = true

[tool.coverage.report]
include_namespace_packages = true
precision = 2

[tool.coverage.xml]
output = "test/unit/pytest-coverage.xml"

[tool.pytest.ini_options]
addopts = "-vv"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    "src",
]
